tests/rosetta/out/Fortran/atomic-updates.error
gfortran: exit status 1
/tmp/atomic-updates.f90:74:7:

   74 |       seedOrder = r(((0)+1))
      |       1
Error: Unclassifiable statement at (1)
/tmp/atomic-updates.f90:39:4:

   39 |     res = (/next,mod(next,n)/)
      |    1
Error: Incompatible ranks 0 and 1 in assignment at (1)
/tmp/atomic-updates.f90:46:4:

   46 |     res = (/next,mod(next,n)/)
      |    1
Error: Incompatible ranks 0 and 1 in assignment at (1)
